--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "npx browser-sync start --server --files '*.html, *.css, js/*.js'",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"read-files": "node common/readFiles.js",
+		"list-exercises": "node common/listExercises.js"
 	},
 	"keywords": [],
 	"author": "",
