--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"start": "npx browser-sync start --server --files '*.html, *.css, js/*.js'",
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"read-files": "node common/readFiles.js",
-		"list-exercises": "node common/listExercises.js"
+		"list-exercises": "node common/listExercises.js",
+		"list-presentations": "node common/listPresentations.js"
 	},
 	"keywords": [],
 	"author": "",
