--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"read-files": "node common/readFiles.js",
 		"list-exercises": "node common/listExercises.js",
+		"list-examples": "node common/listExamples.js",
 		"list-presentations": "node common/listPresentations.js"
 	},
 	"keywords": [],
