--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
 		"start": "npx browser-sync start --server --files '.'",
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"read-files": "node common/readFiles.js",
-		"list-exercises": "node common/listExercises.js",
+		"publish-exercises": "node _scripts/publish_exercises.js",
 		"list-examples": "node common/listExamples.js",
-		"list-presentations": "node common/listPresentations.js"
+		"publish-presentations": "node _scripts/publish_presentations.js"
 	},
 	"keywords": [],
 	"author": "",
