add: class 2 templates

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-	"livePreview.defaultPreviewPath": "/examples/css-barchart.html"
+	"livePreview.defaultPreviewPath": "/exercises/html-calendar/index.html"
 }
